--- a/BloodPressureApp/Resources/layout/BloodPressureList.axml
+++ b/BloodPressureApp/Resources/layout/BloodPressureList.axml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <TextView
-        android:text="Nice Shit!!!"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+    <ListView
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView1" />
+        android:layout_height="match_parent"
+        android:id="@+id/listView1" />
 </LinearLayout>
